Fix vignette too dark

--- a/src/styles.css
+++ b/src/styles.css
@@ -85,7 +85,7 @@ textarea {
     height: 100%;
     background: radial-gradient(
         ellipse at center,
-        rgba(0, 0, 0, 0.5) 50%,
+        rgba(0, 0, 0, 0) 50%,
         rgba(0, 0, 0, 1) 90%,
         rgba(0, 0, 0, 1) 100%
     );
